# ActiveObject

./: .gitignore  ActiveObject.cpp  ActiveObjectPool.cpp  BUILD.bazel  CMakeLists.txt  CMakePresets.json  IMessage.h  Makefile  README.md
cmake/: Config.cmake.in
include/: ActiveObject.h  IMessage.h
include/Pool/: ActiveObjectPool.h
tests/: CMakeLists.txt
tests/fetch_content_test/: CMakeLists.txt
tests/find_package_test/: CMakeLists.txt  CMakePresets.json  test_main.cpp
tests/src/: CMakeLists.txt  test_activeobject.cpp
